Tweaked overflow fix to work

--- a/index.css
+++ b/index.css
@@ -43,6 +43,7 @@ footer {
 }
 .grid {
     display: grid;
+    max-height: 1000px;
     overflow: auto;
 }
 .title-container {
